--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
-
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 test {
