se quitan algunas carpetas

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,11 @@ build/classes/java/main/
 *.iws
 *.iml
 *.ipr
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/gradle.xml
 
