--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     testImplementation 'org.mockito:mockito-core:3.12.4'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
