--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -18,3 +18,12 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Run tests
+          run: ./gradlew test
+      - name: Generate HTML test report
+          run: ./gradlew jacocoTestReport
+      - name: Archive HTML test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test Report
+          path: test/reports/index.html
