--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,34 @@
 plugins {
     id 'java'
+    id 'jacoco'
+
 }
 
 group 'org.fitech'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/releases"
+        }
+
+        maven {
+            url 'https://jitpack.io'
+
+        }
+    }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
-    testImplementation 'org.mockito:mockito-core:3.12.4'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
@@ -22,4 +36,16 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+test {
+    jacoco {
+        reports {
+            html.destination file("test/reports")
+        }
+    }
 }
