prueba de actualizacion del reporte

--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Test Report
-          path: test/reports/index.html
+          path: test/reports/
