--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -27,3 +27,11 @@ jobs:
         with:
           name: Test Report
           path: test/reports/
+      - name: Create deployment status
+          uses: peter-evans/create-deployment-status@v1
+          with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            state: success
+            environment_url: ${{ github.server_url }}/${{ github.repository }}/${{ github.run_id }}/artifacts/download?path=test/reports/index.html
+            log_url: ${{ github.server_url }}/${{ github.repository }}/${{ github.run_id }}
+            description: Test report is ready
