--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           state: success
-          environment-url: ${{ github.server_url }}/${{ github.repository }}/${{ env.GITHUB_RUN_ID }}/artifacts/download?path=test/reports/index.html
+          environment-url: ${{ github.server_url }}/${{ github.repository }}/jobs/${{ env.JOB_ID }}/artifacts/test/reports/index.html
           log-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ env.GITHUB_RUN_ID }}
           description: Test report is ready
           auto-inactive: true
