--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           state: success
-          environment-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ github.job }}/test/reports/index.html
+          environment-url: https://github.com/FerJoanEne/core-fitech/tree/develop/test/reports/index.html
           log-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ env.GITHUB_RUN_ID }}
           description: Test report is ready
           auto-inactive: true
