--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -1,38 +1,55 @@
 name: Build with Gradle
+
 on:
   push:
     branches:
       - master
       - develop
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
+
       - name: Run tests
         run: ./gradlew test
+
       - name: Generate HTML test report
         run: ./gradlew jacocoTestReport
+
       - name: Archive HTML test report
         uses: actions/upload-artifact@v2
         with:
           name: Test Report
-          path: test/reports/
+          path: build/reports/tests/test/index.html
+
+      - name: Publish HTML test report
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: build/reports/tests/test
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          keep-files: true
+
       - name: Create deployment status
         uses: chrnorm/deployment-status@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           state: success
-          environment-url: https://github.com/FerJoanEne/core-fitech/blob/develop/test/reports/index.html
+          environment-url: https://<username>.github.io/<repository-name>/index.html
           log-url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ env.GITHUB_RUN_ID }}
           description: Test report is ready
           auto-inactive: true
