--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.ACCESS_TKN }}
           branch: develop
           folder: ./test/reports/index.html
           keep-files: true
