--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -27,3 +27,8 @@ jobs:
         with:
           name: Test Report
           path: test/reports/
+      - name: Publicar tests en GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/reports/tests/test/
