--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -14,16 +14,27 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+          
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      
       - name: Build with Gradle
         run: ./gradlew build
+      
       - name: Run tests
         run: ./gradlew test
+      
       - name: Generate HTML test report
         run: ./gradlew jacocoTestReport
+      
       - name: Archive HTML test report
         uses: actions/upload-artifact@v2
         with:
           name: Test Report
-          path: test/reports/
+          path: test/reports
+          
+      - name: Download Test Results
+        uses: actions/download-artifact@v2
+        with:
+          name: Test Report
+          path: test/reports
